--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "eslint . --fix && prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.11.0",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/ui": "^2.21.1",
     "@nuxtjs/color-mode": "^3.5.2",
